--- a/style.css/styles.css
+++ b/style.css/styles.css
@@ -65,8 +65,28 @@ a {
 .conteudo-principal {
     padding-left: 125px;
 }
+.header_quadrados_home {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
 
+.footer-img {
+    position: absolute;
+    bottom: 0;
+}
 
+@media (max-width: 730px) {
+    .footer-img, .header_quadrados_home, .logo-img, footer {
+      display: none;
+    }
+}
+
+@media (max-height: 730px) {
+    .footer-img, .header_quadrados_home, .logo-img, footer {
+      display: none;
+    }
+}
 
 .logo-img img {
     width: 31.4375em;
@@ -124,6 +144,7 @@ a {
 }
 
 
+
 .footer-home {
     display: flex;
     width: 100%;
@@ -135,7 +156,7 @@ a {
     flex-direction: row;
     align-items: center;
     width: 43.125em;
-    height: 14.3125em;
+    height: 17.7125em;
     background-color: #1B1E2B;
 
 }
@@ -154,7 +175,7 @@ a {
     align-items: center;
     padding-right: 43px;
     width: 100%;
-    height: 14.3125em;
+    height: 17.7125em;
     background-color: #232536;
 
 }
